pip fix alignment of actions in consultation

--- a/public/css/core1/example.css
+++ b/public/css/core1/example.css
@@ -784,6 +784,11 @@ tr:hover {
     color: var(--text-light);
 }
 
+.text-center {
+    text-align: center;
+}
+
+
 /* Spacing & Flex */
 .d-flex {
     display: flex;
